force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consent__c Lookup</description>
    <label>Consent</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipLabel>Titan Sign Tracking</relationshipLabel>
    <relationshipName>tts80585f49360645fda726cf6a9461ba9e</relationshipName>
    <type>Lookup</type>
</CustomField>