force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__By_Email__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__By_Email__c</fullName>
    <label>By Email</label>
    <type>Email</type>
</CustomField>