force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__By_LastName__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__By_LastName__c</fullName>
    <label>By Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>