force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Comment__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Comment__c</fullName>
    <label>Comment</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>