force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Current_Round_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Current_Round_Name__c</fullName>
    <label>Current Round Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>