force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Data_Id__c</fullName>
    <description>Stores the document submission Id</description>
    <label>Data Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>