force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Document_Link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>