force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Event__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Disclaimer Confirmed</fullName>
            </value>
            <value>
                <fullName>Face verification failed</fullName>
            </value>
            <value>
                <fullName>Face verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>