force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__MetaData__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__MetaData__c</fullName>
    <label>MetaData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>