force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Personal_Signature__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Personal_Signature__c</fullName>
    <label>Personal Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>