force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Process__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doc Gen</fullName>
            </value>
            <value>
                <fullName>CLM</fullName>
            </value>
            <value>
                <fullName>Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>