force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Template_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Template_Signer_Name__c</fullName>
    <inlineHelpText>The name of the signer as it is on the template</inlineHelpText>
    <label>Template Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>