force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__TItan_Document__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__TItan_Document__c</fullName>
    <label>TItan Document</label>
    <referenceTo>Form_Builder__Titan_Sign_Document__c</referenceTo>
    <relationshipName>TItan_Sign_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>