force-app/main/default/objects/Form_Builder__TItan_Sign_Tracking__c/fields/Form_Builder__Titan_Signature_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Titan_Signature_ID__c</fullName>
    <label>Titan Signature ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>